# SDLPractice

./: CMakeLists.txt  MySDL_Texture.cpp  MySDL_Texture.h  ReadMe.md  birthAndDeath.cpp  birthAndDeath.h  config.h  main.cpp  readMe.md  stuff.cpp  stuff.h  vcpkg.json
